# OneScript

./: .atom-build.json  .gitattributes  .gitignore  .gitmodules  .travis.yml  Build.csproj  BuildAll.csproj  Build_Core.csproj  CODESTYLE.md  Jenkinsfile  LICENSE  Makefile  README-EN.md  README.md  appveyor-runtests.cmd  appveyor.yml  build.cmd  codecov.io.sh  cover.bat  coverals.io.bat  debug-publish.bat  dist.cmd  gitlog.cmd  publish-50.bat  publish.bat  travis-runtests.sh  verify_stylecode.ps1
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dotnet45.yml  main.yml  sonar.yml
install/: build.cmd  build.sh  deb-build.sh  install.iss  make-dockers.sh  opm  opm-0.12.1.ospx  opm-0.13.0.ospx  opm-0.14.4.ospx  opm-0.16.0.ospx  opm-0.16.1.ospx  opm-0.16.2.ospx  opm-1.0.2.ospx  opm.bat  opm.ospx  opm.sh  oscript  oscript.bat  package-loader.os  prepare-build.sh  prepare-zip.cmd  rpm-build.sh  setlocals.cmd  unicode-zipper.os  x.sh
install/choco/: onescript.nuspec
install/examples/: distr_build.os  snake.os
sneg_distr/: build.cmd  setlocals.cmd
src/: 1Script.sln  1Script.sln.DotSettings  1Script_Mono.sln  1Script_Mono.userprefs  GlobalAssemblyInfo.cs  TestNative.os  UpgradeLog.htm  UpgradeLog2.htm  globalBinaryDataTest.os  oscommon.targets  versionInc.js
src/ASPNETHandler/: ASPNETHandler.cs  ASPNETHandler.csproj  ASPNetApplicationHost.cs  ASPNetNullApplicationHost.cs  AspEntryScriptSrc.cs  AspNetGlobalContextFunctions.cs  AspNetNullEntryScriptSrc.cs  Dockerfile  HTTPServiceContext.cs  HTTPServiceRequest.cs  HTTPServiceResponse.cs  HTTPServices.csproj  HttpMeans.cs  SessionState.cs  check-docker.sh
src/Benchmarking/: Benchmarking.csproj  Module.bsl  Program.cs  TokenizerBenchmark.cs
src/Component/: Component.csproj  ISimple.cs  SimpleClass.cs  SimpleCollection.cs  SimpleEnum.cs  UseLibrary.cs
src/ConsoleApplication1/: ConsoleApplication1.csproj  Program.cs
src/DebugServer/: DebugEventListener.cs  DebugServer.csproj  DebugSession.cs  DebugeeProcess.cs  Handles.cs  OscriptDebugSession.cs  Program.cs  Protocol.cs  README.md  ServiceProxy.cs  SessionLog.cs  Utilities.cs  oscript-debug-0.1.0.vsix  package.json
src/DemoCallAsFunc/: Program.cs
src/DemoEnumerable/: Program.cs  (+1 more)
src/ScriptEngine.NativeApi/: .gitignore  CMakeLists.txt  DetectUnionOffset.cpp  Dockerfile  NativeApiProxy.cpp  NativeInterface.cpp  NativeInterface.h  ScriptEngine.NativeApi.def  ScriptEngine.NativeApi.vcxproj  ScriptEngine.NativeApi.vcxproj.filters  build-in-docker.bat  build.bat  build.cmd  build.sh  cpp.hint
src/ScriptEngine.NativeApi/include/: ComponentBase.h  com.h  types.h
tests/: BinaryData-global.os  StrGetLine.os  ValueTableIndex.os  addin.os  annotations.os  binary-objects.os  binarydata.os  bitwise.os  cgi-output.os  codestat.os  console.os  constructor.os  datahashing-from-stream.os  datareader.os  delegate-action.os  destructor.os  directives.os  documentation.os  driveinfo.os  encodings.os  engine-behaviors.os  enum.os  environment-variables.os  eval.os  events.os  example-test.os  exception.os  file-object.os  fixed-array.os  fixed-map.os  fixed-structure.os  formatting.os  global-funcs.os  global-json.os  global-new.os  http.os  librarytest.os  managed-com.os  math.os  message-output.os  (+45 more)
tests/native-api/: .gitignore  AddInNative.cpp  AddInNative.def  AddInNative.h  AddInNative.vcxproj  AddInNative.vcxproj.filters  CMakeLists.txt  MANIFEST.XML  build.bat  build.sh  dllmain.cpp  stdafx.cpp  stdafx.h
tests/native-api/include/: AddInDefBase.h  ComponentBase.h  IMemoryManager.h
(+1937 files in other folders)
